PLFM-7248: refactor EmailUtils.validateSynapsePortalHost to handle nulls and perform deeper validation